# opensage-adk

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/wiki/: CNAME  index.md
docs/wiki/assets/stylesheets/: extra.css
docs/wiki/cli/: dependency-check.md  index.md  opensage-web.md
docs/wiki/community/: Contributing.md  Support-and-Feedback.md
docs/wiki/developer_guide/: Adding-Tools.md  Adding-a-New-Sandbox-Backend.md  Adding-a-Sandbox.md  Plugins.md  Project-Structure.md  Sandboxes.md
docs/wiki/evaluation/: adding-evaluations.md  workflow.md
docs/wiki/user_guide/: Configuration.md  Introduction.md  Setup.md
src/opensage/cli/: opensage_cli.py
src/opensage/sandbox/initializers/: joern.py
tests/unit/tests/agents/: test_opensage_agent_prompt.py
